objects/Project__c.object
<CustomObject>
    <description>This object is to show how to create a new custom object</description>
    <fields>
        <fullName>Active1__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indicator__c</fullName>
        <formula>IF(Active1__c = True,
IMAGE(&quot;/resource/greenimg&quot;, &quot;Green&quot;, 30,30),
IMAGE(&quot;/resource/redimg&quot;, &quot;Red&quot;, 30,30)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Team Member</label>
        <referenceTo>Project_Team_Member__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>hp1</fullName>
                </value>
                <value>
                    <fullName>hp2</fullName>
                </value>
                <value>
                    <fullName>hp3</fullName>
                </value>
                <value>
                    <fullName>hp4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Position</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The related position must be in the same department as You cannot relate a position to itself</errorMessage>
            <filterItems>
                <field>Project__c.Universal_Text__c</field>
                <operation>equals</operation>
                <valueField>Project__c.Universal_Text__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Universal_Text__c</fullName>
        <description>This is universal text</description>
        <label>Universal Text</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_to_complete__c</fullName>
        <label>Year to complete</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>